  corruption when they were passed a pseudo-zero argument.  Reported by Guido
  Vranken / ForAllSecure Mayhem.

CVE-2020-1751: A defect in the PowerPC backtrace function could cause an
  out-of-bounds write when executed in a signal frame context.

CVE-2020-1752: A use-after-free vulnerability in the glob function when
  expanding ~user has been fixed.

The following bugs are resolved with this release:

  [20543] Please move from .gnu.linkonce to comdat
  [23296] Data race in setting function descriptor during lazy binding
  [23518] login: Remove utmp backend jump tables
  [24682] localedata: zh_CN first weekday should be Monday per GB/T
    7408-2005
  [24867] malloc: Remove unwanted leading whitespace in malloc_info
  [24879] login: Disarm timer after utmp lock acquisition
  [24880] login: Use struct flock64 in utmp
  [24882] login: Acquire write lock early in pututline
  [24986] alpha: new getegid, geteuid and getppid syscalls used
    unconditionally
  [24899] login: Add nonstring attributes to struct utmp, struct utmpx
  [24902] login: pututxline could fail to overwrite existing entries
  [25066] FAIL: nptl/tst-tls1 on hppa
  [25189] Don't use a custom wrapper macro around __has_include
  [25203] libio: Disable vtable validation for pre-2.1 interposed handles
  [25204] Ignore LD_PREFER_MAP_32BIT_EXEC for SUID programs
  [25225] ld.so fails to link on x86 if GCC defaults to -fcf-protection
  [25232] No const correctness for strchr et al. for Clang++
  [25401] Remove incorrect alloc_size attribute from pvalloc
  [25487] sinl() stack corruption from crafted input (CVE-2020-10029)
  [25523] MIPS/Linux inline syscall template is miscompiled
  [25635] arm: Wrong sysdep order selection for soft-fp
  [25715] system() returns wrong errors when posix_spawn fails
  [25810] x32: Incorrect syscall entries with pointer, off_t and size_t
  [25896] Incorrect prctl
  [25902] Bad LOADARGS_N
  [25933] Off by one error in __strncmp_avx2