@@ -25,6 +25,10 @@ CVE-2020-1751: A defect in the PowerPC backtrace function could cause an
 CVE-2020-1752: A use-after-free vulnerability in the glob function when
   expanding ~user has been fixed.
 
+CVE-2020-27618: An infinite loop has been fixed in the iconv program when
+  invoked with input containing redundant shift sequences in the IBM1364,
+  IBM1371, IBM1388, IBM1390, or IBM1399 character sets.
+
 The following bugs are resolved with this release:
 
   [20543] Please move from .gnu.linkonce to comdat
